--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>와이파이 도시락 클론코딩</title>
 </head>
 <body>
-    
+    <div class="wrap">
+        <header>
+            <div class="logo"></div>
+            <nav>
+                <ul></ul>
+            </nav>
+        </header>
+    </div>
 </body>
 </html>
