--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <ul></ul>
             </nav>
         </header>
+        <main>
+            <div class="container"></div>
+        </main>
     </div>
 </body>
 </html>
